--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -33,7 +33,7 @@
     
                 <div class="form-group">
                     <label for="nome">Nome do Aluno:</label>
-                    <input type="text" id="nome" name="nome" placeholder="Digite seu nome" required>
+                    <input type="text" class="eletiva-input" id="nome" name="nome" placeholder="Digite seu nome" required>
                 </div>
     
                 <div class="form-group">
